Kubernetes/Deployment_Letsencrypt/deployment.yml
#Execute below commands first and then execute yaml
#1. kubectl label node ip-172-20-36-48.ec2.internal app=deploy1
#2. kubectl taint nodes ip-172-20-36-48.ec2.internal type=specialnode:NoSchedule
#3. kubectl create configmap deploy1-volume --from-file=deploy1volume.conf=/home/ec2-user/kubernetes/Deployment_Letsencrypt/deploy1volume.conf -n myspace
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment1
  namespace: myspace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: deploy1
  template:
    metadata:
      labels:
        app: deploy1
    spec:
      tolerations:
      - key: "type"
        operator: "Equal"
        value: "specialnode"
        effect: "NoSchedule"
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                  matchExpressions:
                   - key: "app"
                     operator: In
                     values:
                     - deploy1
      containers:
      - name: k8s-demo
        image: wardviaene/k8s-demo
        ports:
        - name: nodejs-port
          containerPort: 3000
        livenessProbe:
          exec:
            command: ['sh', '-c', 'echo $(date +%s): livenessProbe >> /timing']
          initialDelaySeconds: 15
          timeoutSeconds: 30
        readinessProbe:
          exec:
            command: ['sh', '-c', 'echo $(date +%s): readinessProbe >> /timing']
          initialDelaySeconds: 15
          timeoutSeconds: 30
        lifecycle:
          postStart:
            exec:
              command: ['sh', '-c', 'echo $(date +%s): postStart >> /timing && sleep 10 && echo $(date +%s): end postStart >> /timing']
          preStop:
            exec:
              command: ['sh', '-c', 'echo $(date +%s): preStop >> /timing && sleep 10']
        volumeMounts:
         - name: deploy1-volume
           mountPath: /etc/conf.d
        resources:
          limits:
            cpu: 1000m
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 0.5Gi 
      volumes:
      - name: deploy1-volume
        configMap:
          name: deploy1-volume
          items:
           - key: deploy1volume.conf
             path: deploy1volume.conf
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment2
  namespace: myspace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: deploy2
  template:
    metadata:
      labels:
        app: deploy2
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                   - key: "app"
                     operator: In
                     values:
                     - deploy1
                topologyKey: "kubernetes.io/hostname"
      containers:
      - name: k8s-demo
        image: wardviaene/k8s-demo
        ports:
        - name: nodejs-port
          containerPort: 3000
        livenessProbe:
          httpGet:
            path: /
            port: nodejs-port
          initialDelaySeconds: 15
          timeoutSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: nodejs-port
          initialDelaySeconds: 15
          timeoutSeconds: 30
        volumeMounts:
         - name: deploy2-volume
           mountPath: /etc/creds
      volumes:
      - name: deploy2-volume
        secret:
          secretName: db-secrets
---
apiVersion: v1
kind: Service
metadata:
  name: deployoneservice
  namespace: myspace
  labels:
    prometheus-enabled: "true"
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: deploy1
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: deploytwoservice
  namespace: myspace
  labels:
    prometheus-enabled: "true"
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: deploy2
  type: ClusterIP
---
apiVersion: v1
kind: Namespace
metadata:
  name: myspace
